--- a/python/2_task.ipynb
+++ b/python/2_task.ipynb
@@ -13,12 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "1b225d18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "112123\n",
+      "3225\n",
+      "3225\n"
+     ]
+    }
+   ],
    "source": [
-    "# Начните писать код тут"
+    "a = int(input());\n",
+    "b = int(input());\n",
+    "if a >= b:\n",
+    "    print(b);\n",
+    "else:\n",
+    "    print(a);"
    ]
   },
   {
@@ -33,12 +48,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "5371aa95",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2314\n",
+      "2123\n",
+      "21\n",
+      "21\n"
+     ]
+    }
+   ],
    "source": [
-    "# Начните писать код тут"
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "c = int(input())\n",
+    "if b>a and c>a:\n",
+    "    print(a)\n",
+    "elif a>b and c>b:\n",
+    "    print(b)\n",
+    "else:\n",
+    "    print(c)"
    ]
   },
   {
@@ -53,18 +87,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "ec6a169c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n",
+      "56\n",
+      "34\n"
+     ]
+    }
+   ],
    "source": [
-    "# Начните писать код тут"
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "c = int(input())\n",
+    "if a==b and b==c:\n",
+    "        print(a,b,c)\n",
+    "elif a==b and a<c:\n",
+    "    print(a,b)\n",
+    "elif a==c and c<b:\n",
+    "    print(a,c)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bf1f4ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -78,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
