--- a/python/5_task.ipynb
+++ b/python/5_task.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f79a44d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "85755de8",
    "metadata": {},
@@ -18,9 +26,26 @@
    "execution_count": 1,
    "id": "6ef6d9b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Начните писать код тут"
+    "a = list(range(10))\n",
+    "\n",
+    "def even_elems(a):\n",
+    "    result = []\n",
+    "    for i in a[::2]:\n",
+    "        result.append(i)\n",
+    "    return result\n",
+    "print(a)\n",
+    "print(even_elems(a))"
    ]
   },
   {
@@ -35,12 +60,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3a8cf925",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 1, 8, 0, 2, 7, 6, 9, 3]\n",
+      "[8, 2, 7, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Начните писать код тут"
+    "from random import shuffle\n",
+    "\n",
+    "a = list(range(10))\n",
+    "shuffle(a)\n",
+    "\n",
+    "def greater_elems(a):\n",
+    "    result = []\n",
+    "    for i in range(len(a) - 1):\n",
+    "        if(a[i + 1] > a[i]):\n",
+    "            result.append(a[i+1])\n",
+    "    return result\n",
+    "print(a)\n",
+    "print(greater_elems(a))"
    ]
   },
   {
@@ -55,13 +101,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "34d2beae",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 3, 2, 8, 7, 6, 9, 5, 4]\n",
+      "[1, 9, 3, 2, 8, 7, 6, 0, 5, 4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Начните писать код тут"
+    "from random import shuffle\n",
+    "from math import inf\n",
+    "\n",
+    "a = list(range(10))\n",
+    "shuffle(a)\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "def swap(a):\n",
+    "    \n",
+    "    min_element_index = -1\n",
+    "    min_element = inf\n",
+    "    \n",
+    "    max_element_index = -1\n",
+    "    max_element = -inf\n",
+    "    \n",
+    "    for i in range(len(a)):\n",
+    "        if a[i] > max_element:\n",
+    "            max_element = a[i]\n",
+    "            max_element_index = i\n",
+    "        if a[i] < min_element:\n",
+    "            min_element = a[i]\n",
+    "            min_element_index = i\n",
+    "            \n",
+    "    a[min_element_index], a[max_element_index] = a[max_element_index], a[min_element_index]\n",
+    "    \n",
+    "    return a\n",
+    "print(swap(a))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a08e919a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e93a0e4e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -80,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
